fixed overflow in schedule view

--- a/UNCake/grails-app/assets/stylesheets/schedule.css
+++ b/UNCake/grails-app/assets/stylesheets/schedule.css
@@ -41,8 +41,7 @@ progress {
 }
 
 .selectablemenu {
-    max-height: 50%;
-    height: 100%;
+    height: 40vh;
     overflow-y: auto;
     overflow-x: hidden;
     cursor: pointer;
@@ -56,14 +55,14 @@ progress {
 
 #accordionGroup {
     max-height: 80%;
-    height: 100%;
+    height: 60vh;
     overflow-y: auto;
     cursor: pointer;
 }
 
 #accordionGroup ol {
     max-height: 50%;
-    height: 100%;
+    height: 30vh;
     overflow-y: auto;
 }
 
